# biovars

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
biovars/: Logger.py  Plotter.py  Search.py  Sources.py  __init__.py  cli.py  install_r_packages.py
biovars/R_plotting_scripts/: .RData  plot_summary.r  region_plot.r  world_plot.r
biovars/R_plotting_scripts/assets/: biovars_interactive.Rmd
docs/examples/: biovars_genesearch_hg38.csv
notebooks/: annotations format.ipynb  deletion_investigation.ipynb  integration testing.ipynb  integration.ipynb  pyabraom request bug investigations.ipynb  tests.ipynb
notebooks/data/: abrhg38.csv  gnomad2.csv  gnomad3.csv  variants_pyabraom.pkl
supplementary_information/: index.md
